# Marketing-OS

./: .gitignore  CLAUDE.md  JOURNAL.md  README.md  TODO.md
core-api/: .env.example  README.md  pyproject.toml
core-api/alembic/: env.py
core-api/alembic/versions/: 0001_initial_schema.py  0002_invitations.py  0003_invitation_accepted_by.py  0004_brand_brain.py  0005_brand_chunks_hnsw_index.py
core-api/app/: main.py
core-api/app/core/: brand_indexing.py  brand_query.py  brand_storage.py  config.py  deps.py  invitations.py  middleware.py  security.py
core-api/app/core/ai/: __init__.py  chunking.py  embedder.py  embedder_openai.py  factory.py  llm.py  llm_anthropic.py  pdf.py
core-api/app/db/: session.py
core-api/app/models/: __init__.py  audit_log.py  base.py  brand.py  client.py  invitation.py  platform_account.py  user.py
core-api/app/routers/: admin.py  auth.py  brand.py
core-api/app/schemas/: admin.py  auth.py  brand.py
core-api/scripts/: apply_rls.py  seed_dev.py  smoke_test_session2.py  smoke_test_session5.py  smoke_test_session6.py  smoke_test_session7.py
infrastructure/docs/architecture/decisions/: 0001-stack-tecnologico-iniziale.md  0002-rls-strategy.md  0003-jwt-authentication-strategy.md  0004-frontend-auth-strategy.md  0005-refresh-token-auto-rotation.md  0006-admin-clients-onboarding.md  0007-accept-invitation-flow.md  0008-brand-brain-foundation.md  README.md
supabase/: config.toml
supabase/policies/: 000_helpers.sql  001_clients.sql  002_users.sql  003_platform_accounts.sql  004_audit_log.sql  005_invitations.sql  006_brand_brain.sql
web-dashboard/: .env.example  .prettierignore  package-lock.json  package.json
web-dashboard/src/: proxy.ts
web-dashboard/src/app/: layout.tsx  page.tsx
web-dashboard/src/app/(dashboard)/: layout.tsx
web-dashboard/src/app/(dashboard)/admin/: layout.tsx
web-dashboard/src/app/(dashboard)/admin/clients/: page.tsx
web-dashboard/src/app/(dashboard)/admin/clients/new/: new-client-form.tsx  page.tsx
web-dashboard/src/app/(dashboard)/analytics/: page.tsx
web-dashboard/src/app/(dashboard)/brand-brain/: page.tsx
web-dashboard/src/app/(dashboard)/brand-brain/_components/: brand-brain-tabs.tsx  generate-tab.tsx
web-dashboard/src/app/(dashboard)/content/: page.tsx
web-dashboard/src/app/(dashboard)/dashboard/: page.tsx
web-dashboard/src/app/(dashboard)/settings/: page.tsx
web-dashboard/src/app/accept-invite/: accept-invite-form.tsx  page.tsx
web-dashboard/src/app/api/auth/clear/: route.ts
web-dashboard/src/app/api/auth/rotate/: route.ts
web-dashboard/src/app/login/: login-form.tsx  page.tsx
web-dashboard/src/components/dashboard/: sidebar.tsx  topbar.tsx
web-dashboard/src/lib/: config.ts  types.ts
web-dashboard/src/lib/actions/: admin.ts  auth.ts  brand.ts
web-dashboard/src/lib/api/: auth-context.ts  server-fetch.ts
