[project]
name = "core-api"
version = "0.0.0"
description = "Marketing OS — Core API (FastAPI + SQLAlchemy + Supabase)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [
    { name = "Quintino Pallante", email = "qpallante@gmail.com" },
]
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.34.0,<1.0.0",
    "sqlalchemy[asyncio]>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "pydantic-settings>=2.6.0,<3.0.0",
    "python-jose[cryptography]>=3.3.0,<4.0.0",
    "httpx>=0.27.0,<1.0.0",
    "structlog>=24.4.0,<26.0.0",
    "anthropic>=0.40.0,<1.0.0",
    "openai>=1.50.0,<3.0.0",
    "greenlet (>=3.5.0,<4.0.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
ruff = "^0.7.0"
black = "^24.10.0"
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# ───────────────────────────────────────────────────────────────
# Tool configurations
# ───────────────────────────────────────────────────────────────

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "N",     # pep8-naming
    "S",     # flake8-bandit (security)
    "A",     # flake8-builtins
    "C4",    # flake8-comprehensions
    "PIE",   # flake8-pie
    "RET",   # flake8-return
    "SIM",   # flake8-simplify
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "ERA",   # eradicate (commented-out code)
    "PL",    # pylint
    "RUF",   # ruff-specific
    "TID",   # flake8-tidy-imports
    "ASYNC", # flake8-async
    "DTZ",   # flake8-datetimez
    "T20",   # flake8-print
]
ignore = [
    "PLR0913", # too many arguments (FastAPI dependency injection)
    "PLR2004", # magic value used in comparison
    "S101",    # assertions allowed (tightened in non-test files via per-file-ignores below)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ARG", "PLR2004", "S105", "S106"]
"alembic/env.py" = ["ERA001"]
"scripts/**/*.py" = ["T20"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/versions/"]

[[tool.mypy.overrides]]
module = ["jose.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
